--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -19,7 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["./src/*"],
 
       "@sbm/ui": ["../../packages/ui/src"],
       "@sbm/ui/*": ["../../packages/ui/src/*"],
