feat: integrate api-client for category and expense management, add new endpoints and update existing components

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -28,7 +28,10 @@
       "@sbm/shared/*": ["../../packages/shared/src/*"],
 
       "@sbm/config": ["../../packages/config"],
-      "@sbm/config/*": ["../../packages/config/*"]
+      "@sbm/config/*": ["../../packages/config/*"],
+
+      "@sbm/api-client": ["../../packages/api-client/src"],
+      "@sbm/api-client/*": ["../../packages/api-client/src/*"]
     }
   },
   "include": [
