--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^2.0.1",
+    "@ant-design/icons": "^6.1.0",
+    "@ant-design/nextjs-registry": "^1.3.0",
     "@reduxjs/toolkit": "^2.11.1",
+    "antd": "^6.1.0",
+    "dayjs": "^1.11.19",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
